[package]
name = "server-nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-multipart = "0.5.0"
serde = { version="1.0.147", features = ["derive"] } 
serde_json = "1.0.89"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "macros"] }
dotenv = "0.15.0"
jsonwebtoken = "8"
sha256 = "1.1.1"
chrono = "0.4.23"
uuid = { version = "0.8", features = ["v4"] }
base32 = "0.4.0"
hex = "0.4.3"
actix-files = "0.6.2"
rand = "0.8.5"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
sanitize-filename = "0.3"
webauthn-rs = "0.4.8"
openssl = { version = "0.10.35", features = ["vendored"] }

[dependencies.totp-rs]
version = "^3.0"
features = ["gen_secret"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
